fixed alignment issues and custom scrollbar

--- a/public/global.css
+++ b/public/global.css
@@ -1,15 +1,34 @@
 @font-face {
-  font-family: "iCielMedium";
-  src: local("iCielMedium"), url("./fonts/iCiel-Medium.ttf") format("truetype");
+  font-family: "GothamMedium";
+  src: local("GothamMedium"), url("./fonts/GothamMedium_.ttf") format("truetype");
   font-weight: normal;
 }
 
+
 * {
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
-  font-family: "iCielMedium", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: "GothamMedium", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    scroll-behavior: smooth;
+    
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(199, 199, 199);
+  border-radius: 100vw;
+}
+
+
